spacing issue fixed

--- a/src/components/category-filter/sass/_category-filter.scss
+++ b/src/components/category-filter/sass/_category-filter.scss
@@ -11,6 +11,9 @@
         @include mobile {
             padding: 30px 0;
         }
+        span{
+            
+        }
     }
     h3 {
         padding: 25px 0;
@@ -23,7 +26,7 @@
         }
     }
     .selectMenu{
-        width: 200px;
+        width: 250px;
         @include mobile{
             width: 100%;
         }
