--- a/src/components/recomended-articles/sass/recomended-content.scss
+++ b/src/components/recomended-articles/sass/recomended-content.scss
@@ -15,7 +15,7 @@
 .recomended-wrapper{
 	background-color: $white;
 	@include desktop{
-		padding: 25px 20px;
+		padding:20px;
 	}
 	@include not-desktop{
 		padding: 20px 15px;
@@ -207,7 +207,7 @@
 		}
 	}
 	.footer {
-	    padding: 0 15px;
+	    padding: 0;
 	    margin-top: 15px;
 	}
 }
