--- a/src/sass/global/_styleguide.scss
+++ b/src/sass/global/_styleguide.scss
@@ -14,7 +14,7 @@ section {
     h2 {
         @include family-style(FSMe-Bold , $gray-dark);
         @include heading-font-size(40px,30px,24px);
-        @include heading-line-height(50px,36px,30px);
+        @include heading-line-height(40px,36px,30px);
         @include heading-padding((50px 0),(40px 0),(30px 0));
         @include margin-reset;
     }
@@ -22,7 +22,7 @@ section {
     h3 {
         @include family-style(FSMe-Light ,$gray-dark);
         @include heading-font-size(30px,24px,22px);
-        @include heading-line-height(36px,30px,30px);
+        @include heading-line-height(30px,30px,30px);
         @include margin-reset;
         &.light {
             //@include family-style(FSMe-Light ,$gray-light-bg);
